--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 }
 
 img {
-  width: 400px;
+  width: 200px;
 }
 img:hover {
   box-shadow: 1px 2px 30px 30px #7F00FF;
@@ -61,12 +61,12 @@ img:hover {
 
 .title {
   margin: 0px;
-  font-size: 100px;
+  font-size: 80px;
   font-family: 'Orbitron', sans-serif;
 }
 
 .degrees {
-  font-size: 50px;
+  font-size: 30px;
   font-family: 'Orbitron', sans-serif;
   color: cyan;
 }
@@ -79,4 +79,24 @@ img:hover {
   font-family: 'Orbitron', sans-serif;
   color: white;
   font-size: 40px;
+}
+
+.checkout-button {
+  cursor: pointer;
+  border: 2px solid white;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: center; /* Horizontally aligns the content */
+  align-items: center;
+}
+
+.checkout-lil-nft{
+  width: 50px;
+}
+
+.checkout-lil-nft:hover {
+  cursor: pointer;
 }
